# agentskill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.MD  README.md  ROADMAP.md  SKILL.md  SYSTEM.md  cli.py  pyproject.toml
.github/workflows/: build.yml  deploy.yml  main.yml  release.yml
agentskill/: cli.py  constants.py  engine.py  main.py
agentskill/analyzers/: base.py
agentskill/analyzers/language/: generic.py  python.py  rust.py
agentskill/extractors/: commands.py  filesystem.py  git.py  structure.py
agentskill/lib/: agents_document.py  generate_runner.py  multifile_output.py  output_layouts.py  output_profiles.py  profile_rendering.py  reference_flow.py  reference_initialization.py  update_runner.py
agentskill/synthesis/: __init__.py
docs/reference/: README.md  cli.md  commands.md  common.md  library.md
examples/: MONOREPO.md  MULTI_LANGUAGE.md  README.md  SAMPLE.MD  SAMPLE.md  SINGLE_LANGUAGE.md  gitclaw-airscript.md  sample.md
examples/bash/scripts/: deploy.sh
examples/bash/tests/: deploy.bats
examples/c/: Makefile
examples/c/src/: util.h
examples/c/tests/: util_test.c
examples/cpp/src/: app.cpp
examples/cpp/tests/: app_test.cpp
examples/csharp/src/: App.cs
examples/csharp/tests/: UserServiceTests.cs
examples/go/: go.mod
examples/mixed/: README.md  go.mod  package.json
examples/objectivec/: Podfile
examples/python/: pyproject.toml
references/: GOTCHAS.MD  GOTCHAS.md  output-template.md  synthesis-prompt.md
scripts/: _common.py  agentskill.py  config.py  extract.py  git.py  graph.py  measure.py  scan.py  symbols.py  tests.py
scripts/commands/: config.py  git.py  graph.py  measure.py  scan.py  symbols.py  tests.py
scripts/common/: constants.py  languages.py
scripts/lib/: agents_document.py  cli_entrypoint.py  generate_runner.py  logging_utils.py  output.py  output_schema.py  parsers.py  reference_initialization.py  references.py  runner.py  update_merge.py
tests/: contract_utils.py  test_agents_document.py  test_agentskill.py  test_cli.py  test_cli_contract.py  test_cli_entrypoint.py  test_config.py  test_docs.py  test_examples.py  test_generate_cli.py  test_git.py  test_graph.py  test_js_ts_graph.py  test_js_ts_symbols.py  test_js_ts_tests.py  test_languages.py  test_output.py  test_output_contracts.py  test_output_profiles.py  test_output_schema.py  test_parsers.py  test_reference_initialization.py  test_references.py  test_runner.py  test_rust_graph.py  test_support.py  test_symbols.py  test_tests.py  test_update_cli.py  test_update_e2e.py  test_update_merge.py
tests/contracts/: analyze_mixed.json  analyze_python.json  config_mixed.json  graph_mixed.json  scan_python.json  symbols_python.json
(+43 files in other folders)
