[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentskill"
version = "0.1.0"
description = "Analyze repositories and synthesize AGENTS.md"
requires-python = ">=3.9"

[project.scripts]
agentskill = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
