[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentskill"
version = "0.1.0"
description = "Analyze repositories and synthesize AGENTS.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.15.12",
]

[project.scripts]
agentskill = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
exclude = [
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E402"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
