[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agsk"
version = "1.0.0"
description = "Analyze repositories and synthesize AGENTS.md"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    'tomli; python_version < "3.11"',
    'PyYAML>=6.0; python_version < "3.11"',
]

[project.optional-dependencies]
parsers = [
    "PyYAML>=6.0",
]
dev = [
    "mypy>=1.10",
    "pre-commit>=4.4",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "PyYAML>=6.0",
    "ruff>=0.15.12",
    "tomli>=2.4.1",
    "types-PyYAML>=6.0",
]

[project.scripts]
agentskill = "agentskill.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentskill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
exclude = [
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["B", "C4", "E4", "E7", "E9", "F", "I", "N", "SIM", "UP", "W"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["agentskill", "scripts", "tests"]
mypy_path = "tests"
explicit_package_bases = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
